* Changelog

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.10...dev][Unreleased]]

*** Added
+ *tetragono*: Add =gm_conf_eq= to equilibrium the configuration of the sampling lattice.
*** Changed
+ *tetragono*: The physics edge index should be non-negative now.
+ *tetragono*: Use MPI IO to speed up the performance of configurations. Previously, every process will read all
  configuration and choose a single configuration when reading, and allgather all configuration and write to file when
  writing. Now, the program uses MPI IO to write file parallelly, and read the corresponding configuration directly
  without read all configurations.
*** Deprecated
*** Removed
+ *tetragono*: Remove ansatz product state support, which may be added again in the future, but it require many updates.
*** Fixed

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.7...v0.3.9][v0.3.9]] - 2023-09-07

*** Changed
+ *tetragono*: The interface of =save_result= allow only =(state, result, whole_result)= now.
+ *TAT.hpp*: Change the view of sign problem in =conjugate=, there is only one conjugate, but the trivial metric may not
  be positive definite, so in gradient descent, this negative metric term need to be considered, the optional paramter
  =trivial_metric= is used to apply the trivial metric when conjugating.
+ *TAT.py*: Update the new interface of =conjugate=.
+ *TAT.py*: Use customized string stream in =TAT.py= to avoid a duplicated copy of string.
+ *TAT.hpp*: Check the larger tensor to try to fit the common edges in contract, if not proper, check the other one. The
  previous behavior always check tensor 1 firstly and check tensor 2 secondly.
+ *scalapack.py*: Change the loader API. The previous way is =from PyScalapack import Scalapack= and using
  =Scalapack("libscalapack.so")= to get the scalapack object, Now user should use =import PyScalapack= and
  =PyScalapack("libscalapack.so")= directly.
*** Removed